commit number four: adding the first table html component and comportaments

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,93 @@
-<h1>Hello world</h1>
+<div class="student-record">
+  <form>
+    <div class="mb-3 row">
+      <label
+        for="table-filtering-search"
+        class="col-xs-3 col-sm-auto col-form-label"
+        >Search:</label
+      >
+      <div class="col-xs-3 col-sm-auto">
+        <input
+          id="table-filtering-search"
+          class="form-control"
+          type="text"
+          [formControl]="filter"
+        />
+      </div>
+    </div>
+  </form>
+
+  <table class="table table-striped record-table">
+    <thead>
+      <tr>
+        <th>#</th>
+        <th>Name</th>
+        <th>Country</th>
+        <th>Physics</th>
+        <th>Chemistry</th>
+        <th>Math</th>
+        <th>Computer</th>
+      </tr>
+    </thead>
+    <tbody>
+      @for (student of students; track student.name; let i = $index){
+      <tr>
+        <th>{{ i + 1 }}</th>
+        <td>
+          <ngb-highlight
+            [result]="student.name"
+            [term]="filter.value"
+          ></ngb-highlight>
+          <!-- {{ student.name }} -->
+        </td>
+        <td>
+          <img
+            [src]="student.studentImage"
+            [alt]="student.name"
+            class="me-2"
+            style="width: 20px"
+          />
+          <ngb-highlight
+            [result]="student.country.toString()"
+            [term]="filter.value"
+          ></ngb-highlight>
+          <!-- {{ student.country }} -->
+        </td>
+        <td>
+          <ngb-highlight
+            [result]="student.physics.toString()"
+            [term]="filter.value"
+          ></ngb-highlight>
+          <!-- {{ student.physics }} -->
+        </td>
+        <td>
+          <ngb-highlight
+            [result]="student.chemistry.toString()"
+            [term]="filter.value"
+          ></ngb-highlight>
+          <!-- {{ student.chemistry }} -->
+        </td>
+        <td>
+          <ngb-highlight
+            [result]="student.maths.toString()"
+            [term]="filter.value"
+          ></ngb-highlight>
+          <!-- {{ student.maths }}</td> -->
+        </td>
+
+        <td>
+          <ngb-highlight
+            [result]="student.computer.toString()"
+            [term]="filter.value"
+          ></ngb-highlight>
+          <!-- {{ student.computer }} -->
+        </td>
+      </tr>
+      } @empty {
+      <tr>
+        <td colspan="4" style="text-align: center">No records found</td>
+      </tr>
+      }
+    </tbody>
+  </table>
+</div>
