--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,22 @@
+// .student-record{
+//     padding: 16px;
+// }
+
+// .record-table {
+//     border: 1px solid #f0f0f0
+// }
+
 .student-record{
     padding: 16px;
-}
+    margin-left: 60px;
 
-.record-table {
-    border: 1px solid #f0f0f0
+    &__record-table {
+        border: 1px solid #f0f0f0
+    }
+
+    &.sidebarExpanded {
+        margin-left: 250px;
+    }
+
+    
 }
