--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,6 @@
 
 /* Importing Bootstrap SCSS file. */
 @import 'bootstrap/scss/bootstrap';
+
+@import '@ag-grid-community/styles/ag-grid.css';
+@import '@ag-grid-community/styles/ag-theme-quartz.css';
